# sh_scc

./: CMakeLists.txt  README.md  package.xml
config/: params.yaml
include/sh_scc/: color_peaks_calculator_node.hpp
launch/: color_peaks.launch  sh_color_peaks_calculator.launch.py  sh_scc_image_stream.launch.py
src/: color_peaks_calculator_node.cpp
src/lib/: color_peaks_calculator_node.cpp
src/nodes/: color_peaks_calculator_node.cpp  cv_bridge_node.cpp
