<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>sh_scc</name>
    <version>0.0.0</version>
    <description>The screen color coordinator controllers for the smart home.</description>
    <maintainer email="rnvandemark@gmail.com">R. Nick Vandemark</maintainer>
    <license>BSD</license>
    <author email="rnvandemark@gmail.com">R. Nick Vandemark</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>sh_common</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sh_common_interfaces</build_depend>
    <build_depend>sh_scc_interfaces</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>OpenCV</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>sh_common</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>sh_common_interfaces</exec_depend>
    <exec_depend>sh_scc_interfaces</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>OpenCV</exec_depend>
    <exec_depend>image_publisher</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
